bugdown: Add inline video thumbnails.
Following are squashed commit messages, these shall be changed later.

bugdown: Add function for adding html video element.

bugdown: Add extension check for video.

bugdown: Add video inlining helper function.

bugdown: Add inline-video case to run function.

bugdown: Add inline video testcase and remove .mov files from general tests.

add styles.

--- a/static/styles/rendered_markdown.scss
+++ b/static/styles/rendered_markdown.scss
@@ -192,6 +192,23 @@
         font-weight: bold;
     }
 
+    .message_inline_video {
+        position: relative;
+        margin-bottom: 5px;
+        margin-left: 5px;
+        height: 360px;
+        display: block !important;
+        border: none !important;
+    }
+
+    .inline_video {
+        position: relative;
+        height: 360px;
+        max-width: 90%;
+        display: block !important;
+        border: none !important;
+    }
+
     .twitter-image,
     .message_inline_image {
         position: relative;
